# FairyGUI-cocos2dx

./: .gitignore  LICENSE  README.md
Examples/: .cocos-project.json  CMakeLists.txt
Examples/Classes/: AppDelegate.cpp  BagScene.cpp  BagScene.h  BagWindow.cpp  BagWindow.h  BasicsScene.cpp  BasicsScene.h  ChatScene.cpp  ChatScene.h  CooldownScene.cpp  CooldownScene.h  DemoScene.cpp  DemoScene.h  EmojiParser.cpp  EmojiParser.h  GuideScene.cpp  GuideScene.h  HelloWorldScene.cpp  HelloWorldScene.h  HitTestScene.cpp  HitTestScene.h  JoystickModule.cpp  JoystickModule.h  JoystickScene.cpp  JoystickScene.h  ListEffectScene.cpp  ListEffectScene.h  LoopListScene.cpp  LoopListScene.h  MailItem.cpp  MailItem.h  MenuScene.cpp  MenuScene.h  ModalWaitingScene.cpp  ModalWaitingScene.h  PullToRefreshScene.cpp  PullToRefreshScene.h  ScrollPaneScene.cpp  ScrollPaneScene.h  TransitionDemoScene.cpp  (+9 more)
Examples/Resources/UI/: Bag.bytes  Bag.fui  Basics.bytes  Basics.fui  Basics@sprites.bytes  Emoji.bytes  Emoji.fui  HitTest.bytes  HitTest.fui  HitTest@sprites.bytes  MainMenu.bytes  MainMenu.fui  MainMenu@sprites.bytes  ModalWaiting.bytes  ModalWaiting.fui  PullToRefresh.bytes  PullToRefresh.fui  Transition.bytes  Transition.fui
Examples/UIProject/: FairyGUI-Examples.fairy  FairyGUI-cocos2dx-Examples.fairy
Examples/UIProject/assets/Bag/: WindowFrame.xml
Examples/UIProject/assets/Basics/: Demo_Controller.xml  Demo_Graph.xml  Demo_Image.xml  Demo_Text.xml  WindowB.xml  package.xml
Examples/UIProject/assets/Cooldown/: Button2.xml  Main.xml
Examples/UIProject/assets/Emoji/: Button2.xml  Main.xml  package.xml
Examples/UIProject/assets/HitTest/: Main.xml  package.xml
Examples/UIProject/assets/MainMenu/: CloseButton.xml  Main.xml
Examples/UIProject/assets/ModalWaiting/: GlobalModalWaiting.xml  package.xml
Examples/UIProject/assets/PullToRefresh/: Footer.xml  Header.xml
Examples/UIProject/assets/Transition/: Main.xml  PathDemo.xml  package.xml
Examples/UIProject/settings/: Adaptation.json  Common.json  Publish.json
Examples/proj.android/: .cproject  .project  AndroidManifest.xml
Examples/proj.android-studio/: gradle.properties  settings.gradle
Examples/proj.android-studio/app/: AndroidManifest.xml  build.gradle
Examples/proj.android-studio/app/jni/: Android.mk
Examples/proj.android/jni/: Android.mk
Examples/proj.android/res/values/: strings.xml
Examples/proj.ios_mac/Examples.xcodeproj/: project.pbxproj
Examples/proj.ios_mac/Examples.xcodeproj/project.xcworkspace/xcuserdata/yingtangxiao.xcuserdatad/: UserInterfaceState.xcuserstate
Examples/proj.ios_mac/Examples.xcodeproj/xcuserdata/yingtangxiao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Examples/proj.ios_mac/Examples.xcodeproj/xcuserdata/yingtangxiao.xcuserdatad/xcschemes/: xcschememanagement.plist
Examples/proj.ios_mac/ios/: Info.plist
Examples/proj.ios_mac/mac/: Info.plist
Examples/proj.win32/: Examples.sln  Examples.vcxproj  Examples.vcxproj.filters
libfairygui/: Android.mk  CMakeLists.txt
libfairygui/Classes/: Controller.cpp  Controller.h  DragDropManager.cpp  DragDropManager.h  FairyGUI.h  FairyGUIMacros.h  FieldTypes.h  GButton.cpp  GButton.h  GComboBox.cpp  GComboBox.h  GComponent.cpp  GComponent.h  GGraph.cpp  GGraph.h  GGroup.cpp  GGroup.h  GImage.cpp  GImage.h  GLabel.cpp  GLabel.h  GList.cpp  GList.h  GLoader.cpp  GLoader.h  GLoader3D.cpp  GLoader3D.h  GMovieClip.cpp  GMovieClip.h  GObject.cpp  GObject.h  GObjectPool.cpp  GObjectPool.h  GProgressBar.cpp  GProgressBar.h  GRichTextField.cpp  GRichTextField.h  GRoot.cpp  GRoot.h  GScrollBar.cpp  (+35 more)
libfairygui/Classes/controller_action/: ChangePageAction.cpp  ChangePageAction.h  ControllerAction.cpp  ControllerAction.h  PlayTransitionAction.cpp  PlayTransitionAction.h
libfairygui/Classes/display/: Actions.cpp  Actions.h  BitmapFont.cpp  BitmapFont.h  FUIContainer.cpp  FUIContainer.h  FUIInput.cpp  FUIInput.h  FUILabel.cpp  FUILabel.h  FUIRichText.cpp  FUIRichText.h  FUISprite.cpp  FUISprite.h  ScissorClipNode.cpp  ScissorClipNode.h  TextFormat.cpp  TextFormat.h
libfairygui/Classes/event/: EventContext.cpp  EventContext.h  HitTest.cpp  HitTest.h  InputEvent.cpp  InputEvent.h  InputProcessor.cpp  InputProcessor.h  UIEventDispatcher.cpp  UIEventDispatcher.h  UIEventType.h
libfairygui/Classes/gears/: GearAnimation.cpp  GearAnimation.h  GearBase.cpp  GearBase.h  GearColor.cpp  GearColor.h  GearDisplay.cpp  GearDisplay.h  GearDisplay2.cpp  GearDisplay2.h  GearFontSize.cpp  GearFontSize.h  GearIcon.cpp  GearIcon.h  GearLook.cpp  GearLook.h  GearSize.cpp  GearSize.h  GearText.cpp  GearText.h  GearXY.cpp  GearXY.h
libfairygui/Classes/treeview/: TreeNode.cpp  TreeNode.h  TreeView.cpp  TreeView.h
libfairygui/Classes/tween/: EaseManager.cpp  EaseManager.h  EaseType.h  GPath.cpp  GPath.h  GTween.cpp  GTween.h  GTweener.cpp  GTweener.h  TweenManager.cpp  TweenManager.h  TweenPropType.cpp  TweenPropType.h  TweenValue.cpp  TweenValue.h
libfairygui/Classes/utils/: ByteArray.cpp  ByteArray.h  ByteBuffer.cpp  ByteBuffer.h  SwitchHelper.h  ToolSet.cpp  ToolSet.h  UBBParser.cpp  UBBParser.h  WeakPtr.cpp  WeakPtr.h
libfairygui/Classes/utils/html/: HtmlElement.cpp  HtmlElement.h  HtmlObject.cpp  HtmlObject.h  HtmlParser.cpp  HtmlParser.h
libfairygui/proj.ios_mac/fairygui.xcodeproj/: project.pbxproj
libfairygui/proj.ios_mac/fairygui.xcodeproj/xcuserdata/yingtangxiao.xcuserdatad/xcschemes/: xcschememanagement.plist
libfairygui/proj.ios_mac/libfairygui MAC/: libfairygui_MAC.cpp  libfairygui_MAC.hpp  libfairygui_MACPriv.hpp
libfairygui/proj.ios_mac/libfairygui iOS/: libfairygui_iOS.h  libfairygui_iOS.m
libfairygui/proj.win32/: libfairygui.vcxproj  libfairygui.vcxproj.filters
